--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+
+body{
+  font-family: "Noto Sans Display", sans-serif;
+}
